--- a/wahue/app/src/main/res/values/strings.xml
+++ b/wahue/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">tone</string>
+    <string name="app_name">WaHUE</string>
     <string name="title_activity_camera">CameraActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
